# Madoc

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: fragment.glsl  vertex.glsl
include/madoc/: biome_generator.h  log_utils.h  perlin_noise.h  shader_utils.h  voronoi.h  voronoi_mesh.h
src/: biome_generator.cpp  log_utils.cpp  main.cpp  perlin_noise.cpp  shader_utils.cpp  voronoi.cpp  voronoi_mesh.cpp
